# ai-vs-humans-ctf-report

./: .gitignore  README.md  build.ninja  flake.nix  matplotlibrc  pyproject.toml
.cursor/rules/: yagni.mdc
.github/workflows/: paper.yml
data/: AI vs Humans CTF - 1st team to solve.csv  AI vs Humans CTF - Challenge Interactions.csv  AI vs Humans CTF - Owns .csv  AI vs Humans CTF - Participants.csv  CA AI teams interactions - CA - AI teams interactions (1).csv  CA AI teams interactions - CA - AI teams rank(1).csv  CA challenge interactions - CA rank - all teams.csv  Palisade AI CTF Hackathon Imperturbable team agents used.csv  anonymize_user_data.py  cyberapocalypse_ic_ctf_clean.json  ic_ctf_clean.json
paper-typst/: main.typ  ref.bib
paper-typst/tables/: ai_team_standings_AI_vs_Humans_CTF.csv  ai_team_standings_CyberApocalypse.csv
src/: ctftime_json.py  data.py  datavis.py  micro_leaderboard.py  sanity_checks.py  tables.py  tasks_solved_per_category.py  time_horizon.py
